# zipsignerust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  build.sh  key.sh  phone.txt  uniq_ph.txt
.github/scripts/: gen_notes.sh  prepare_rolling.sh
.github/workflows/: build.yml  release.yml  sign.yaml  sign.yml
certs/: private_key.pem  public_key.pem
src/: certificate.rs  cli.rs  config.rs  crypto.rs  default_keys.rs  error.rs  keys.rs  lib.rs  main.rs  pkcs7.rs  processor.rs  signing.rs  ui.rs  verification.rs
tests/: integration.rs  integration_test.rs
tests/test-assets/: test_file.txt
