[package]
name = "zipsignerust"
version = "1.0.0"
edition = "2021"
authors = ["Tiash / @MrCarb0n"]
description = "High-performance cryptographic signer for Android ZIP/OTA packages."
license = "MIT"
repository = "https://github.com/MrCarb0n/zipsignerust"
readme = "README.md"
keywords = ["android", "apk", "signing", "jar", "zip"]
categories = ["command-line-utilities", "cryptography"]
rust-version = "1.70"

[[bin]]
name = "zipsignerust"
path = "src/main.rs"

[dependencies]
ring = "0.17"
pem = "1.0"
base64 = "0.21"
rayon = "1.10"
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "suggestions", "error-context"] }
zip = { version = "2.1", default-features = false, features = ["deflate", "bzip2", "zstd", "lzma", "time"] }
x509-parser = "0.15"
tempfile = "3.10"
filetime = "0.2"
crc32fast = "1.3"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
